# chap-command-fuse

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
fuse_prompts/: function-for.txt  include-for.txt  maIloc.txt
src/chap/commands/: explain.py  fuse.py
