# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name="chap-command-expain"
authors = [{name = "Jeff Epler", email = "jepler@gmail.com"}]
description = "Example command plugin for chap"
dynamic = ["readme","version"]
dependencies = [
    "chap",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
homepage = "https://github.com/jepler/chap-command-expain"
repository = "https://github.com/jepler/chap-command-expain"

[tool.setuptools_scm]
[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}
